# GAPRO_Exercise_2

./: .gitignore  Apple.cpp  Apple.h  CMakeLists.txt  Component.cpp  Component.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  ITUGames.h  Initable.h  InputManager.cpp  InputManager.h  Inputable.h  Metadata.cpp  Metadata.h  README.md  Renderable.cpp  Renderable.h  SnakeBody.cpp  SnakeBody.h  SnakeHead.cpp  SnakeHead.h  TextRenderable.cpp  TextRenderable.h  Updateable.cpp  Updateable.h  main.cpp
